--- a/manifest.json
+++ b/manifest.json
@@ -11,15 +11,14 @@
   "content_scripts": [
     {
     "matches": [
-      "https://*/*"
+      "https://*.vk.com/*"
     ],
     "js": ["inject.js"]
     }
   ],
   "permissions": [
     "tabs",
-    "storage",
-    "webNavigation"
+    "storage"
   ],
   "web_accessible_resources": [
     "content.js"
