--- a/manifest.json
+++ b/manifest.json
@@ -23,8 +23,12 @@
   "web_accessible_resources": [
     "content.js"
   ],
+  "icons": {
+    "16": "icons/icon_16.png",
+    "48": "icons/icon_48.png",
+    "128": "icons/icon_128.png"
+  },
   "browser_action": {
-    "default_icon": "icons/leaf.png",
     "default_popup": "popup.html"
   },
   "manifest_version": 2
